Fixed css layout bugs

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,9 +21,9 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-font-family: 'Cormorant', serif;
-font-weight: 600;
-color: rgb(25, 25, 25);
+  font-family: 'Cormorant', serif;
+  font-weight: 600;
+  color: rgb(25, 25, 25);
 }
 
 h1 {
@@ -32,6 +32,10 @@ h1 {
 
 a:link, a:visited, a:active, a:hover {
   text-decoration: none;
+}
+
+a:link, a:visited {
+
 }
 
 header {
@@ -58,9 +62,30 @@ header {
 
 #utility {
   display: flex;
+  align-items: center;
   font-weight: 500;
   font-size: 1.2em;
   text-transform: uppercase;
+}
+
+div.cart-count {
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  background-color: #CD5C5C;
+  color: white;
+  font-size: .8em;
+  padding: 5px;
+  margin-left: 5px;
+
+}
+
+div.cart-count.open {
+  visibility: visible;
 }
 
 main {
@@ -143,9 +168,17 @@ button:hover {
   background-color: gray;
 }
 
+button > a:link, button > a:visited {
+  color: rgb(25, 25, 25);
+}
+
 #form > form > button {
   grid-column: span 2;
   margin-top: 20px;
+}
+
+#buy > button {
+  grid-column: span 2;
 }
 
 label, .value {
